--- a/samples/dashboards/demos/minimal/demo.css
+++ b/samples/dashboards/demos/minimal/demo.css
@@ -7,5 +7,5 @@
 }
 
 #dashboard-row-1 {
-    height: 200px;
+    height: 320px;
 }
